add a new page for test run details using query params

--- a/application.json
+++ b/application.json
@@ -24,6 +24,10 @@
     {
       "id": "Test runs",
       "isDefault": false
+    },
+    {
+      "id": "Test run details",
+      "isDefault": false
     }
   ],
   "unpublishedApplicationDetail": {
